# python_geotag

./: .gitignore  README.md  example_positions.yaml  main.py  pyproject.toml  pytest.ini  test_results.txt
app/: __init__.py  config_manager.py  elevation_service.py  export_manager.py  geocoding_service.py  gpx_manager.py  photo_manager.py  positions_manager.py  server.py
static/: app.js  styles.css
templates/: index.html
test/: TEST_README.md  conftest.py  test_config_manager.py  test_export_manager.py  test_gpx_manager.py  test_photo_manager.py  test_positions_manager.py  test_services.py
test/resources/: README.md  config_default.yaml  config_google_maps.yaml  config_satellite.yaml  minimal_positions.yaml  outbound.gpx  return.gpx  sample_positions.yaml
